--- a/.github/workflows/spack.yml
+++ b/.github/workflows/spack.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build dolfinx
         run: |
           source spack/share/spack/setup-env.sh
-          ./spconfig -G Ninja -S cpp
+          ./spconfig.py -G Ninja -S cpp
           cmake --build .
 
       - name: Build and run unit tests
