--- a/.github/workflows/spack.yml
+++ b/.github/workflows/spack.yml
@@ -18,8 +18,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: ./spack
-          repository: js947/spack
-          ref: add-fenics-x
+          repository: spack/spack
+          ref: develop
 
       - name: Build dependencies
         run: |
